# stable-diffusion

./: .envrc  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: pip.yaml
